--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -157,7 +157,7 @@
         <activity
             android:name=".carowner.ui.activity.SettingActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden|adjustResize" />
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".carowner.ui.activity.AddressActivity"
             android:screenOrientation="portrait" />
