--- a/commonlibrary/build.gradle
+++ b/commonlibrary/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     compile files('libs/wmqtt.jar')
     compile files('libs/umeng-update-v2.7.0.jar')
     compile files('src/main/jniLibs/BaiduLBS_Android.jar')
+    compile files('libs/commons-codec-1.8.jar')
 }
